# blackmagic-camera-control

./: Cargo.toml  LICENSE.md  PROTOCOL.json  README.md  build.rs  devnotes.md
examples/: control.rs  datastring.rs  dev.rs  dev2.rs  dev3.rs  listen.rs
src/: blecamera.rs  bluetooth_camera.rs  camera.rs  data.rs  error.rs  lib.rs  message.rs  protocol.rs  rawcommand.rs
