[package]
name = "blackmagic-camera-control"
version = "0.1.0"
authors = ["coral <jonas@jonasbengtson.se>"]
edition = "2018"
build = "build/main.rs"
license = "MIT"
keywords = ["blackmagic", "cinema", "camera", "bluetooth", "control"]
categories = ["multimedia::video", "parsing"]

[lib]
name = "blackmagic_camera_control"
path = "src/lib.rs"

[dependencies]
btleplug = "0.8.1"
fixed = {version = "1.9.0", features = ["num-traits"]}
futures = "0.3.16"
num-traits = "0.2.14"
thiserror = "1.0.26"
tokio = { version = "1.10.0", features = ["full"] }
uuid = { version = "0.8.2", features = ["serde", "v5"] }


[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
codegen = "0.1.3"
convert_case = "0.4.0"
uuid = { version = "0.8.2", features = ["serde", "v5"] }