[package]
name = "blackmagic-camera-control"
version = "0.2.3-alpha.0"
authors = ["coral <jonas@jonasbengtson.se>"]
edition = "2018"
build = "build/main.rs"
license = "MIT"
keywords = ["blackmagic", "cinema", "camera", "bluetooth", "control"]
categories = ["multimedia::video", "parsing"]
description = "Interface with your Blackmagic camera over Bluetooth Low Energy in Rust"
repository = "https://github.com/coral/blackmagic-camera-control"

[lib]
name = "blackmagic_camera_control"
path = "src/lib.rs"

[dependencies]
fixed = {version = "1.9.0", features = ["num-traits"]}
futures = "0.3.16"
num-traits = "0.2.14"
thiserror = "1.0.26"
uuid = { version = "1.2.1", features = ["serde", "v5"] }

#BLE Camera
btleplug = {version = "0.10.3", optional = true}
tokio = { version = "1.10.0", features = [ "macros"], optional = true}

#CEC Camera
cec-rs = {version = "6.0.0", optional = true}

[dev-dependencies]
tokio = { version = "1.10.0", features = [ "full"]}

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
codegen = "0.2.0"
convert_case = "0.6.0"
uuid = { version = "1.2.1", features = ["serde", "v5"] }

[features]
default = ["ble", "cec"]
ble = ["tokio", "btleplug"]
cec = ["cec-rs"]
